--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@smastrom/react-rating": "^1.3.2",
+    "axios": "^1.6.2",
     "firebase": "^10.6.0",
     "localforage": "^1.10.0",
     "lottie-react": "^2.4.0",
@@ -18,6 +19,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.1",
+    "react-icons": "^4.12.0",
     "react-router-dom": "^6.16.0",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.10.1"
