--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@smastrom/react-rating": "^1.3.2",
     "@tanstack/react-query": "^5.8.7",
+    "apexcharts": "^3.44.0",
     "axios": "^1.6.2",
     "firebase": "^10.6.0",
     "localforage": "^1.10.0",
@@ -19,9 +20,12 @@
     "match-sorter": "^6.3.1",
     "mongoose": "^8.0.1",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.1",
+    "react-hook-form": "^7.48.2",
     "react-icons": "^4.12.0",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.16.0",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.10.1"
