--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "localforage": "^1.10.0",
     "lottie-react": "^2.4.0",
     "match-sorter": "^6.3.1",
+    "mongodb": "^6.3.0",
     "mongoose": "^8.0.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
