--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "mongoose": "^8.0.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
+    "react-countup": "^6.5.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.1",
     "react-hook-form": "^7.48.2",
     "react-icons": "^4.12.0",
     "react-modal": "^3.16.1",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.16.0",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.10.1"
