--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "firebase": "^10.6.0",
     "localforage": "^1.10.0",
     "lottie-react": "^2.4.0",
+    "mapbox-gl": "^2.15.0",
     "match-sorter": "^6.3.1",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.1",
@@ -27,6 +28,7 @@
     "react-helmet-async": "^2.0.1",
     "react-hook-form": "^7.48.2",
     "react-icons": "^4.12.0",
+    "react-map-gl": "^7.1.6",
     "react-modal": "^3.16.1",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.16.0",
