--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "apexcharts": "^3.44.0",
     "axios": "^1.6.2",
     "firebase": "^10.6.0",
+    "leaflet": "^1.9.4",
     "localforage": "^1.10.0",
     "lottie-react": "^2.4.0",
     "mapbox-gl": "^2.15.0",
@@ -28,6 +29,7 @@
     "react-helmet-async": "^2.0.1",
     "react-hook-form": "^7.48.2",
     "react-icons": "^4.12.0",
+    "react-leaflet": "^4.2.1",
     "react-map-gl": "^7.1.6",
     "react-modal": "^3.16.1",
     "react-query": "^3.39.3",
