--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.19",
     "@smastrom/react-rating": "^1.3.2",
     "@tanstack/react-query": "^5.8.7",
     "apexcharts": "^3.44.0",
     "axios": "^1.6.2",
     "firebase": "^10.6.0",
-    "leaflet": "^1.9.4",
     "localforage": "^1.10.0",
     "lottie-react": "^2.4.0",
-    "mapbox-gl": "^2.15.0",
     "match-sorter": "^6.3.1",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.1",
@@ -29,7 +30,6 @@
     "react-helmet-async": "^2.0.1",
     "react-hook-form": "^7.48.2",
     "react-icons": "^4.12.0",
-    "react-leaflet": "^4.2.1",
     "react-map-gl": "^7.1.6",
     "react-modal": "^3.16.1",
     "react-query": "^3.39.3",
