--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.14.19",
     "@smastrom/react-rating": "^1.3.2",
     "@tanstack/react-query": "^5.8.7",
+    "aos": "^2.3.4",
     "apexcharts": "^3.44.0",
     "axios": "^1.6.2",
     "firebase": "^10.6.0",
