--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.19",
     "@mui/material": "^5.14.19",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.7",
     "@smastrom/react-rating": "^1.3.2",
     "@tanstack/react-query": "^5.8.7",
     "aos": "^2.3.4",
@@ -36,6 +38,7 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^6.16.0",
     "sort-by": "^1.2.0",
+    "styled-components": "^6.1.1",
     "sweetalert2": "^11.10.1"
   },
   "devDependencies": {
